set up authentication for butcher service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=6000
+jwt.secret=secret
 
 spring.datasource.url=jdbc:sqlserver://mssql.fhict.local;database=dbi383656_bobutcher;
 spring.datasource.username=dbi383656_bobutcher
